// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructTree should construct empty tree for empty data 1`] = `
<ul>
  <li>
    <span
      class="dt-open-bracket"
    >
      {
    </span>
    <span
      class="dt-close-bracket"
    >
      }
    </span>
  </li>
</ul>
`;

exports[`constructTree should construct empty tree for empty data 2`] = `
<ul>
  <li>
    <span
      class="dt-open-bracket"
    >
      [
    </span>
    <span
      class="dt-close-bracket"
    >
      ]
    </span>
  </li>
</ul>
`;

exports[`constructTree should not add separators 1`] = `
<ul>
  <li
    class="dt-hc"
    data-cc="// 2 Items"
  >
    <span
      class="dt-expandable"
    />
    <span
      class="dt-open-bracket"
    >
      {
    </span>
    <ul>
      <li>
        <span
          class="dt-key"
        >
          lat
          <span
            class="dt-colon"
          >
            : 
          </span>
        </span>
        <span
          class="dt-num"
        >
          3.2658
        </span>
      </li>
      <li>
        <span
          class="dt-key"
        >
          long
          <span
            class="dt-colon"
          >
            : 
          </span>
        </span>
        <span
          class="dt-num"
        >
          5.3698
        </span>
      </li>
    </ul>
    <span
      class="dt-dots"
    />
    <span
      class="dt-close-bracket"
    >
      }
    </span>
  </li>
</ul>
`;

exports[`constructTree should recursively construct the tree for nested objects, array 1`] = `
<ul>
  <li
    class="dt-hc"
    data-cc="// 2 Items"
  >
    <span
      class="dt-expandable"
    />
    <span
      class="dt-open-bracket"
    >
      {
    </span>
    <ul>
      <li
        class="dt-hc"
        data-cc="// 3 Items"
      >
        <span
          class="dt-expandable"
        />
        <span
          class="dt-key"
        >
          location
          <span
            class="dt-colon"
          >
            : 
          </span>
        </span>
        <span
          class="dt-open-bracket"
        >
          {
        </span>
        <ul>
          <li>
            <span
              class="dt-key"
            >
              district
              <span
                class="dt-colon"
              >
                : 
              </span>
            </span>
            <span
              class="dt-str"
            >
              "foo"
            </span>
          </li>
          <li>
            <span
              class="dt-key"
            >
              province
              <span
                class="dt-colon"
              >
                : 
              </span>
            </span>
            <span
              class="dt-str"
            >
              "bar"
            </span>
          </li>
          <li
            class="dt-hc"
            data-cc="// 2 Items"
          >
            <span
              class="dt-expandable"
            />
            <span
              class="dt-key"
            >
              coordinates
              <span
                class="dt-colon"
              >
                : 
              </span>
            </span>
            <span
              class="dt-open-bracket"
            >
              {
            </span>
            <ul>
              <li>
                <span
                  class="dt-key"
                >
                  lat
                  <span
                    class="dt-colon"
                  >
                    : 
                  </span>
                </span>
                <span
                  class="dt-num"
                >
                  3.2658
                </span>
              </li>
              <li>
                <span
                  class="dt-key"
                >
                  long
                  <span
                    class="dt-colon"
                  >
                    : 
                  </span>
                </span>
                <span
                  class="dt-num"
                >
                  5.3698
                </span>
              </li>
            </ul>
            <span
              class="dt-dots"
            />
            <span
              class="dt-close-bracket"
            >
              }
            </span>
          </li>
        </ul>
        <span
          class="dt-dots"
        />
        <span
          class="dt-close-bracket"
        >
          }
        </span>
      </li>
      <li
        class="dt-hc"
        data-cc="// 2 Items"
      >
        <span
          class="dt-expandable"
        />
        <span
          class="dt-key"
        >
          otherNames
          <span
            class="dt-colon"
          >
            : 
          </span>
        </span>
        <span
          class="dt-open-bracket"
        >
          [
        </span>
        <ul>
          <li>
            <span
              class="dt-key"
            >
              0
              <span
                class="dt-colon"
              >
                : 
              </span>
            </span>
            <span
              class="dt-str"
            >
              "baz"
            </span>
          </li>
          <li>
            <span
              class="dt-key"
            >
              1
              <span
                class="dt-colon"
              >
                : 
              </span>
            </span>
            <span
              class="dt-str"
            >
              "__^__"
            </span>
          </li>
        </ul>
        <span
          class="dt-dots"
        />
        <span
          class="dt-close-bracket"
        >
          ]
        </span>
      </li>
    </ul>
    <span
      class="dt-dots"
    />
    <span
      class="dt-close-bracket"
    >
      }
    </span>
  </li>
</ul>
`;
